--- a/ht-extension-organizer/ht-extension-organizer.cabal
+++ b/ht-extension-organizer/ht-extension-organizer.cabal
@@ -39,6 +39,7 @@ library
                        LambdaCaseChecker,
                        TupleSectionsChecker,
                        UnboxedTuplesChecker,
+                       MagicHashChecker,
                        ExtMonad,
                        ExtMap,
                        TraverseAST,
